--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -46,8 +46,10 @@
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/../..</rng.parent.dir>
 
-    <uberjar.name>examples-stress</uberjar.name>
-    <project.mainClass>org.apache.commons.rng.examples.stress.RandomStressTester</project.mainClass>
+    <uberjar.name>rng-utils</uberjar.name>
+    <project.mainClass>org.apache.commons.rng.examples.stress.RNGUtilsCommand</project.mainClass>
+
+    <rng.picocli.version>3.9.5</rng.picocli.version>
   </properties>
 
   <dependencies>
@@ -55,10 +57,14 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-simple</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-sampling</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+      <version>${rng.picocli.version}</version>
     </dependency>
   </dependencies>
 
@@ -78,6 +84,7 @@
                 </goals>
                 <configuration>
                   <finalName>${uberjar.name}</finalName>
+                  <minimizeJar>true</minimizeJar>
                   <transformers>
                     <transformer
                       implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
