Upgrade jacoco for Java 11

--- a/pom.xml
+++ b/pom.xml
@@ -113,8 +113,8 @@
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
 
-    <!-- Temporary fix to support Java 8 -->
-    <commons.jacoco.version>0.8.0</commons.jacoco.version>
+    <!-- Jacoco version fix to support Java 8 & 11 using parent-47 -->
+    <commons.jacoco.version>0.8.3</commons.jacoco.version>
     <commons.jacoco.classRatio>0.96</commons.jacoco.classRatio>
     <commons.jacoco.instructionRatio>0.8</commons.jacoco.instructionRatio>
     <commons.jacoco.methodRatio>0.8</commons.jacoco.methodRatio>
