--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,9 @@
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
 
+    <!-- Version fix to support Java 11 site generation using parent-47 -->
+    <commons.spotbugs.version>3.1.11</commons.spotbugs.version>
+
     <!-- Jacoco version fix to support Java 8 & 11 using parent-47 -->
     <commons.jacoco.version>0.8.3</commons.jacoco.version>
     <commons.jacoco.classRatio>0.96</commons.jacoco.classRatio>
