Fix javadoc build on java 11 for main modules.
This requires a HTML 5 compliant <table> in the MersenneTwister javadocs
and a new <caption> element to replace the summary attribute.

Note: The JPMS modules fail. The javadoc tool for java 11 will not support links to older java APIs when building for a Java 9 source due to "packages in the unamed module".

--- a/commons-rng-examples/examples-jpms/pom.xml
+++ b/commons-rng-examples/examples-jpms/pom.xml
@@ -45,6 +45,32 @@
     <maven.compiler.release>9</maven.compiler.release>
   </properties>
 
+  <build>
+    <plugins>
+      <!--  Revert javadoc fix in parent -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>9</source>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <reporting>
+    <plugins>
+      <!--  Revert javadoc fix in parent -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>9</source>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+
   <modules>
     <module>jpms-lib</module>
     <module>jpms-app</module>
