--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,9 @@
     <contributor>
       <name>Artem Barger</name>
     </contributor>
+     <contributor>
+      <name>Abhishek Singh Dhadwal</name>
+    </contributor>
   </contributors>
 
   <dependencies>
