Update examples stress to expose a single public application class.
This fixes the javadoc plugin as all other classes are package-private.

--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -48,7 +48,7 @@
     <rng.parent.dir>${basedir}/../..</rng.parent.dir>
 
     <uberjar.name>examples-stress</uberjar.name>
-    <project.mainClass>org.apache.commons.rng.examples.stress.ExamplesStressCommand</project.mainClass>
+    <project.mainClass>org.apache.commons.rng.examples.stress.ExamplesStressApplication</project.mainClass>
 
     <rng.picocli.version>3.9.5</rng.picocli.version>
   </properties>
