--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ jdk:
   - oraclejdk9
 
 after_success:
-  - mvn clean test pmd:pmd spotbugs:spotbugs checkstyle:checkstyle jacoco:report coveralls:report
+  - mvn clean test spotbugs:check checkstyle:check jacoco:report coveralls:report
