--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
   </properties>
 
   <build>
+    <defaultGoal>clean verify apache-rat:check clirr:check checkstyle:check pmd:check spotbugs:check javadoc:javadoc</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
