RNG-107: Enable checkstyle for the test sources.
- Add space around =
- Remove unnecessary parenthesis
- Remove unused imports
- Fix whitespace around braces
- Suppress certain allowed checks using suppressions file
- Fix indentation

--- a/pom.xml
+++ b/pom.xml
@@ -584,7 +584,7 @@
               </dependency>
             </dependencies>
             <configuration>
-              <includeTestSourceDirectory>false</includeTestSourceDirectory>
+              <includeTestSourceDirectory>true</includeTestSourceDirectory>
               <configLocation>${rng.parent.dir}/src/main/resources/checkstyle/checkstyle.xml</configLocation>
               <headerLocation>${rng.parent.dir}/src/main/resources/checkstyle/license-header.txt</headerLocation>
               <suppressionsLocation>${rng.parent.dir}/src/main/resources/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
