--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <issueManagement>
     <system>jira</system>
-    <url>http://issues.apache.org/jira/browse/RNG</url>
+    <url>https://issues.apache.org/jira/browse/RNG</url>
   </issueManagement>
 
   <scm>
