Added example of how to run a specific sampler benchmark.

--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -135,6 +135,7 @@
            java -jar target/examples-jmh.jar -h
            java -jar target/examples-jmh.jar NextDoubleGenerationPerformance -rf json -rff out.json
            java -jar target/examples-jmh.jar NextIntGen.*nextInt$ -p randomSourceName=MSWS,PCG_MCG_XSH_RS_32
+           java -jar target/examples-jmh.jar ContinuousSamplersPerformance.sample -p samplerType=BoxMullerNormalizedGaussianSampler
       -->
       <id>examples-jmh</id>
       <build>
