Exclude patch files from rat check.

--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,7 @@
             <exclude>src/site/resources/release-notes/RELEASE-NOTES-*.txt</exclude>
             <exclude>src/site/resources/txt/userguide/stress/**</exclude>
             <exclude>dist-archive/**</exclude>
+            <exclude>**/*.patch</exclude>
           </excludes>
         </configuration>
       </plugin>
