Enable JApiCmp for JDK 1.8+.
Requires moving <commons.bc.version> from the dist-archive module to the
top level pom.

--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -50,6 +50,10 @@
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
 
     <rng.picocli.version>3.9.5</rng.picocli.version>
+
+    <!-- Disable JApiCmp failures (but keep the report). The examples API is allowed to change. -->
+    <commons.japicmp.breakBuildOnBinaryIncompatibleModifications>false</commons.japicmp.breakBuildOnBinaryIncompatibleModifications>
+    <commons.japicmp.breakBuildOnSourceIncompatibleModifications>false</commons.japicmp.breakBuildOnSourceIncompatibleModifications>
   </properties>
 
   <dependencyManagement>
