--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <commons.automatic.module.name>org.apache.commons.rng.parent</commons.automatic.module.name>
     <!-- do not use snapshot suffix here -->
     <commons.release.version>1.2</commons.release.version>
+    <commons.bc.version>${commons.release.version}</commons.bc.version>
     <commons.rc.version>RC1</commons.rc.version>
     <commons.release.desc>(requires Java 6+)</commons.release.desc>
     <commons.binary.suffix>-bin</commons.binary.suffix>
@@ -524,6 +525,8 @@
         <allowscript.javadoc.qualifier>--allow-script-in-comments</allowscript.javadoc.qualifier>
         <!-- Check for all javadoc errors -->
         <doclint.javadoc.qualifier>-Xdoclint:all</doclint.javadoc.qualifier>
+        <!-- Enable JApiCmp -->
+        <japicmp.skip>false</japicmp.skip>
       </properties>
       <build>
         <plugins>
@@ -559,6 +562,18 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <groupId>com.github.siom79.japicmp</groupId>
+            <artifactId>japicmp-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>verify</phase>
+                <goals>
+                  <goal>cmp</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
       <reporting>
@@ -582,6 +597,11 @@
                 </reports>
               </reportSet>
             </reportSets>
+          </plugin>
+          <plugin>
+            <groupId>com.github.siom79.japicmp</groupId>
+            <artifactId>japicmp-maven-plugin</artifactId>
+            <version>${commons.japicmp.version}</version>
           </plugin>
         </plugins>
       </reporting>
