Enable japicmp only if on Java 1.8+ using properties.
The use of src/site/resources/profile.japicmp relies on the parent
checking for Java 1.8 in the japicmp profile. This is currently not
done.

--- a/commons-rng-client-api/pom.xml
+++ b/commons-rng-client-api/pom.xml
@@ -42,4 +42,17 @@
     <commons.release.isDistModule>false</commons.release.isDistModule>
   </properties>
 
+  <profiles>
+    <profile>
+      <id>jdk8-plugins</id>
+      <activation>
+        <jdk>[1.8,)</jdk>
+      </activation>
+      <properties>
+        <!-- Allow japicmp -->
+        <japicmp.skip>false</japicmp.skip>
+      </properties>
+    </profile>
+  </profiles>
+
 </project>
